--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": " tsc-watch --noClear -p tsconfig.json --onSuccess \"node dist/app.js\""
-    
   },
   "keywords": [],
   "author": "",
@@ -19,6 +18,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mysql2": "3.10.3"
   }
 }
