--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -18,7 +18,10 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@mikro-orm/core": "6.3.10",
+    "@mikro-orm/mysql": "6.3.10",
+    "@mikro-orm/sql-highlighter": "1.0.1",
     "express": "^4.19.2",
-    "mysql2": "3.10.3"
+    "reflect-metadata": "0.2.2"
   }
 }
