--- a/BackEnd/tsconfig.json
+++ b/BackEnd/tsconfig.json
@@ -3,7 +3,7 @@
     "incremental": true,
     "target": "es2020",
     "module": "ES2022",
-    "moduleResolution": "bundler",
+    "moduleResolution": "Node",
     "sourceMap": true,
     "outDir": "./dist",
     "esModuleInterop": true,
