--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -22,8 +22,11 @@
     "@mikro-orm/core": "6.3.10",
     "@mikro-orm/mysql": "6.3.10",
     "@mikro-orm/sql-highlighter": "1.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "reflect-metadata": "0.2.2"
   }
