--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.12.12",
     "tsc-watch": "^6.2.0",
     "typescript": "^5.4.5"
