--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -25,6 +25,7 @@
     "@mikro-orm/mysql": "6.3.10",
     "@mikro-orm/sql-highlighter": "1.0.1",
     "bcryptjs": "^2.4.3",
+    "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.19.2",
