--- a/FrontEnd/SysAcad/package.json
+++ b/FrontEnd/SysAcad/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.2",
     "@auth0/angular-jwt": "^5.2.0",
+    "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
