--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -18,7 +18,9 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.12.12",
+    "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
+    "supertest": "^7.1.0",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.2.0",
