--- a/BackEnd/envirement.env
+++ b/BackEnd/envirement.env
@@ -1,10 +1,11 @@
-# Configuración de la base de datos
-DB_HOST=localhost
-DB_PORT=3306
-DB_USER=dsw
-DB_PASSWORD=dsw
-DB_NAME=sistema
-NODE_ENV=development
+# Configuración de la base de datos (Railway)
+DB_HOST=tramway.proxy.rlwy.net
+DB_PORT=55259
+DB_USER=root
+DB_PASSWORD=uDiMSErdZDCTwlqGImUQEJBCQaoyUGjq
+DB_NAME=railway
+
+NODE_ENV=production
 
 # Otros valores
 JWT_SECRET=belenfede123
