--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -6,7 +6,9 @@
   "main": "app.js",
   "scripts": {
     "test": "jest",
-    "start:dev": " tsc-watch --noClear -p tsconfig.json --onSuccess \"node dist/src/app.js\""
+    "start:dev": " tsc-watch --noClear -p tsconfig.json --onSuccess \"node dist/src/app.js\"",
+    "build": "tsc",
+    "start": "node dist/src/app.js"
   },
   "keywords": [],
   "author": "",
