--- a/FrontEnd/SysAcad/package.json
+++ b/FrontEnd/SysAcad/package.json
@@ -33,6 +33,7 @@
     "@angular-devkit/build-angular": "^18.1.2",
     "@angular/cli": "^18.1.2",
     "@angular/compiler-cli": "^18.1.0",
+    "@playwright/test": "^1.52.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.14",
