--- a/BackEnd/tsconfig.json
+++ b/BackEnd/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "Node",
     "sourceMap": true,
     "outDir": "./dist",
-   
+    "rootDir": "src",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -15,6 +15,6 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
   },
-  "include": ["src/*/", "*/.ts"],
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
