--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -8,7 +8,7 @@
     "test": "jest",
     "start:dev": "tsc-watch --noClear -p tsconfig.json --onSuccess \"node dist/src/app.js\"",
     "build": "tsc",
-    "start": "node dist/app.js"
+    "start": "node dist/src/app.js"
   },
   "keywords": [],
   "author": "",
